# ResearchOps-Ai

./: .gitignore  README.md  main.py  output.json  pyproject.toml  requirements.txt  temp.py  visualize_graph.py
app/agents/: analyst.py  evaluator.py  facts_researcher.py  finalizer.py  initializer.py  research_collector.py  research_planner.py  reviewer.py  risks_researcher.py  supervisor.py  trends_researcher.py  web_researcher.py  writer.py
app/config/: constants.py  export.py  logger.py  settings.py
app/graph/: evaluation_state.py  research_router.py  router.py  state.py  workflow.py
app/llm/: factory.py
app/models/: evaluation_models.py  output_models.py  review_models.py
app/tools/: calculator.py  web_search.py
tests/: langsmith_test.py
