[project]
name = "research-orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.138.0",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.6",
    "langsmith>=0.8.18",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
    "uvicorn>=0.49.0",
]
